--- a/config/locales/hu.yml
+++ b/config/locales/hu.yml
@@ -54,7 +54,7 @@ hu:
   remove connection: "Megszakítás"
   connection users: "Néhány YouVersion felhasználó akihez kapcsolódsz a / (kapcsolódás):"
   connection marketing: "A YouVersion sokkal élvezetesebb együtt a barátokkal.  Linkeld a YouVersion fiókodat a többi  közösségi oldaladhoz és azonnal megtalálod a barátaidat a YouVersion-on. Ha linkeled a fiókjaidat, néhány kattintással meg tudod osztani a tartalmakat. Mi soha semmit nem fogunk postolni a tudomásod nélkül."
-  next step connections: "Következő: Kapcsold össze a fiókjaid, és találj rá a barátaidra"
+  next step connections: "Következő: Kapcsold össze a fiókjaid, és találj rá barátaidra"
   no notes found: "%{username} nem rendelkezik jegyzettel."
   no recent activity: "%{username} nem rendelkezik legutóbbi tevékenységekkel."
   no badges found yourself: "Még nem szereztél egy jelvényt se."
@@ -73,9 +73,9 @@ hu:
   my devices: "Csatlakoztatott készülékek"
   language name: "Magyar"
   sign up: "Regisztráció"
-  have an account: "Már van Fiókod?"
+  have an account: "Már van fiókod?"
   no account: "Nincs Fiókod?"
-  successful sign-in: "Bejelenkezve, mint %{user}!"
+  successful sign-in: "Bejelentkezve, mint %{user}!"
   successful sign-out: "Kijelentkeztél!"
   invalid login: "Érvénytelen Felhasználóvév vagy Jelszó"
   invalid password: "Helytelen Jelszó"
@@ -89,7 +89,7 @@ hu:
   confirm danger: "Igen, biztos"
   registered ago: "%{time_ago} óta regisztrált."
   version header: "Verzió: %{version}"
-  bible versions: "Biblia Verziók"
+  bible versions: "Biblia verziók"
   reader: "Olvasás"
   lifechurch short url: "LifeChurch.tv"
   about: "Rólunk"
@@ -111,7 +111,7 @@ hu:
   save: "Mentés"
   cancel: "Mégsem"
   try the beta: "Bétateszt"
-  welcome to the beta: "Üdvözlünk az új YouVersion.com-on!"
+  welcome to the beta: "Isten hozott az új YouVersion.com-on!"
   highlight: "Kiemelés"
   comment: "Új hozzászólás"
   note: "Új bejegyzés"
@@ -204,7 +204,7 @@ hu:
     user name: "Felhasználónév"
     agreement: "Egyetértek a YouVersion %{terms_link}-el."
     terms and conditions: "ÁSZF"
-    facebook sign up success: "Remek! Engedélyeztetted a Facebook-ot. Válassz egy YouVersion felhasználónevet és jelszót a folytatáshoz."
+    facebook sign up success: "Remek! Engedélyeztetted a Facebookot. Válassz egy YouVersion felhasználónevet és jelszót a folytatáshoz."
     register: "Regisztráció"
     thanks for registering: "Köszönjük a regisztrációt!"
     welcome to youversion: "Isten hozott a YouVersion közösségben!"
@@ -236,12 +236,12 @@ hu:
     account delete success: "A YouVersion fiókod meg lett szüntetve. Reméljük, meg fogod találni a megfelelő módot, hogy kapcsolatban maradj a Bibliával. A következő alkalmazások segíthetnek a jövőben:  <a href= http://www.youversion.com/free-bible-apps> http://www.youversion.com/free-bible-apps </a>"
     delete account description: "Ha törlöd a fiókodat, minden információ rólad, előzményed és személyre szabás végleg törlődik a YouVersion-ből és a Biblia app-ból (ilyenek a jegyzetek, könyvjelzők, kiemelések stb.) Ez a műveletet sem Te, sem mi nem tudjuk visszavonni. Ha biztosan folytatni akarod, alább megteheted."
     user recent activity: "%{user} legutóbbi tevékenysége"
-    user notes: "%{user} Jegyzetei"
+    user notes: "%{user} jegyzetei"
     my friends: "Barátok"
     my notes: "Jegyzetek"
-    user friends: "%{user} Barátai"
+    user friends: "%{user} barátai"
     my bookmarks: "Könyvjelzőim"
-    user bookmarks: "%{user} Könyvjelzői"
+    user bookmarks: "%{user} könyvjelzői"
     my badges: "Jelvényeim"
     revised date: "Utoljára átvizsgálva: %{date}"
     update email copy: "Adj meg egy új e-mail címed és kattints ide: E-mail cím frissítése. Elküldünk egy linket amin keresztül megerősítheted új e-mail címedet."
@@ -412,16 +412,16 @@ hu:
     version field: "Verzió:"
   badges:
     earned a badge: "Jelvényt szereztél"
-    user badges: "%{user} Jelvényei"
+    user badges: "%{user} jelvényei"
   plans:
     title: "Olvasási tervek"
     browse by category: "Tallózás Kategória alapján"
-    browse plans: "%{category} Tervek tallózása"
+    browse plans: "%{category} tervek tallózása"
     swap list localization: "(<a href='%{swap_link}'>Tekintsd meg %{swap_locale}</a>)"
     showing language filtered: "Csak %{lang_name} nyelven elérhető tervek mutatása"
     all: "Mindegyik"
-    all plans: "Összes Terv"
-    all category plans: "Összes %{category} Terv"
+    all plans: "Összes terv"
+    all category plans: "Összes %{category} terv"
     my plans: "Terveim"
     none found: "Nem találtunk a feltételednek megfelelő tervet. Próbáld szélesíteni a kört a keresésben."
     about publisher: "A Kiadóról"
@@ -442,11 +442,11 @@ hu:
     a users plans: "%{username} tervei"
     you have no plans: "Jelenleg egy olvasási tervre se vagy feliratkozva."
     no public plans: "%{username} nem rendelkezik látható olvasási tervekkel."
-    filter by lang: "Tervek szűrése Nyelv szerint"
+    filter by lang: "Tervek szűrése nyelv szerint"
     plan settings: "Terv beállítások"
     settings: "Beállítások"
     search: "Keresés"
-    search placeholder: "%{category} Tervek keresése"
+    search placeholder: "%{category} tervek keresése"
     subscribe to plan: "Kezdd el ezt a Tervet"
     previous day: "Előző nap"
     next day: "Következő nap"
@@ -470,25 +470,25 @@ hu:
     restart: "Terv újrakezdése"
     privacy description: "A te döntésed. Akarod hogy a többi ember lássa hogy ezt a tervet olvasod ?"
     make private: "Bizalmassá tesz"
-    make public: "Nyilvánosságra hoz"
+    make public: "Nyilvánossá tesz"
     privacy title: "Adatvédelem"
     stop reading: "Terv olvasásának abbahagyása"
     accountability: "Fiók"
     email reminder to me: "Küldj e-mailben napi emlékeztetőt (%{email_address})"
     email weekly report to a friend: "Heti email jelentés küldése egy vagy több YouVersion tagnak"
     calendar: "Naptár"
-    search members placeholder: "YouVersion Tag keresése"
+    search members placeholder: "YouVersion tag keresése"
     search members: "Keresés"
     email_on: "Kézbesítés bekapcsolása"
     email_off: "Kézbesítés kikapcsolása"
     email delivery text: "Kapcsold be az email fogadást, ha szeretnéd megkapni a napi olvasó terved tartalmát a postafiókodba. Válaszd ki azt a napszakot, amikor meg szeretnéd kapni az emailt és azt a bibliafordítást, ami a legjobban tetszik neked."
-    email delivery: "E-mail Küldés"
+    email delivery: "Email kézbesítés"
     morning: "Reggel"
     afternoon: "Délután"
     evening: "Este"
     delivery time: "Kézbesítés ideje:"
     delivery version: "Kézbesítés típusa:"
-    add members placeholder: "YouVersion Tag neve"
+    add members placeholder: "YouVersion tag neve"
     add member: "Hozzáadás"
     email edit: "Szerkesztés"
     unsubscribe successful: "Leiratkoztál erről a tervről."
@@ -557,8 +557,8 @@ hu:
     creation error: "Sajnáljuk, nem sikerült kiemelni."
     delete error: "Sajnáljuk, a kiemelést nem sikerült eltávolítani."
   searching:
-    bible: "Szent Biblia"
-    plans: "Olvasási Tervek"
+    bible: "Biblia"
+    plans: "Olvasási tervek"
     users: "Felhasználók"
     notes: "Jegyzetek"
     total results: "Körülbelül %{total} eredmény"
