--- a/config/locales/pt-PT.yml
+++ b/config/locales/pt-PT.yml
@@ -22,7 +22,7 @@ pt-PT:
   meta:
     100million:
       title: "Tem Início nos 100 Milhões"
-      description: "A app da Bíblia já foi instalada quase 100 milhões de vezes - um marco incrível! Mas estamos apenas a começar. Descarregue a App da Bíblia grátis - e depois partilhe-a com os seus amigos. Vamos fazer história juntos."
+      description: "A App da Bíblia já foi instalada quase 100 milhões de vezes - um marco incrível! Mas estamos apenas a começar. Descarregue a App da Bíblia grátis - e depois partilhe-a com os seus amigos. Vamos fazer história juntos."
     mobile:
       title: "A App da Bíblia"
       description: "Dezenas de milhões de pessoas estão a usar a App da Bóblia para ler, escutar, ver e partilhar a Palavra de Deus, fazendo dessas atividades uma parte integrante do seu dia a dia. Descarregue esta app grátis e aceda aos seus marcadores, notas e planos de leitura em qualquer lugar. Desfrute de centenas de versões, áudio incluído, tudo no seu dispositivo móvel."
@@ -747,8 +747,8 @@ pt-PT:
         tw:
           tweet: "App da Bíblia do @YouVersion com lugar fixo no meu ecrã inicial. Leia, veja, oiça e partilhe... tudo numa app grátis: bible.com/app"
         em:
-          subject: "Já instalou a App da Bíblia?"
-          body: "Tenho desfrutado da App da Bíblia do YouVersion e acho que também irá gostar. Consulto a Bíblia muitas mais vezes estes últimos dias e isso deve-se à facilidade de a ler, ver, escutar e partilhar. Dispõe inclusive de Planos de leitura, com uma seleção de trechos bíblicos preparados para as minhas leituras diárias.\n\nPode descarregá-la (grátis!) para quase todos os dispositivos móveis aqui: \nhttp://www.bible.com/app"
+          subject: "Já tem a App da Bíblia?"
+          body: "Tenho desfrutado da App da Bíblia do YouVersion e acho que também irá gostar. Consulto a Bíblia muito mais agora e isso deve-se à facilidade de a ler, ver, escutar e partilhar. Dispõe inclusivamente de Planos de Leitura, com uma seleção de trechos bíblicos preparados para as minhas leituras diárias.\n\nPode descarregá-la (grátis!) para quase todos os dispositivos móveis aqui: \nhttp://www.bible.com/app"
       body:
         p1: "10 de Julho vai ser um grande dia. Não só é o dia em que a App da Bíblia cumpre o seu 5º aniversário, mas também o dia em que a loja iTunes da Apple celebra 5 anos desde o seu lançamento."
         p2: "Quer um dia ainda melhor? Com a sua ajuda, é o dia em que a App da Bíblia irá atingir os 100 milhões de downloads."
