--- a/config/locales/bg.yml
+++ b/config/locales/bg.yml
@@ -733,6 +733,7 @@ bg:
     line 1: "Натиснете на който и да било стих или сбор от стихове за да ги запазите, маркирате, да напишете бележка за тях или да ги споделите с приятели!"
   campaigns:
     100m:
+      tagline: "започва със <em>100 милиона</em>"
       intro: "Може ли Библията да достигне 100 милиона инсталации преди петата си годишнина на 10 юли? Само с твоята помощ!"
       share:
         with friends: "Сподели с приятели"
