--- a/config/locales/id.yml
+++ b/config/locales/id.yml
@@ -759,4 +759,4 @@ id:
         copy: "Baca, Dengarkan, Tonton, Bagikan. Dapatkan Ap Alkitab untuk ponsel atau tablet anda: <a href='http://bible.com/app'>Unduh Sekarang</a>"
       sidebar:
         tagline: "Mari kita mengukir sejarah bersama."
-        button: "Bagikan Bible App"
+        button: "Bagikan Aplikasi Alkitab"
