--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -748,7 +748,7 @@ zh-CN:
           tweet: "我将 @YouVersion 的圣经软件常驻在主屏幕上。无论阅读圣经，观看视频，收听录音或分享经文... 都可在这个免费软件中完成：bible.com/app"
         em:
           subject: "您有安装圣经软件吗？"
-          body: "我很喜欢使用 YouVersion 的圣经软件，我想你也会喜欢的。不管是阅读，看视频，听录音或分享经文，这个圣经软件都很好用，所以现在我接触圣经的次数也更多了。圣经软件甚至还包括了读经计划，可将经文有选择的挑出来，供我每天阅读。⏎\n⏎\n圣经软件支持几乎任何移动设备，你可以从这里 ( 免费! ) 安装：http://www.bible.com/app"
+          body: "我很喜欢使用 YouVersion 的圣经软件，我想你也会喜欢的。不管是阅读，看视频，听录音或分享经文，这个圣经软件都很好用，所以现在我接触圣经的次数也更多了。圣经软件甚至还包括了读经计划，可将经文有选择的挑出来，供我每天阅读。\n\n圣经软件支持几乎任何移动设备，你可以从这里 ( 免费! ) 安装：http://www.bible.com/app"
       body:
         p1: "7月10日将是一个大日子，它不仅是圣经软件诞生五周年，这也是苹果公司的iTunes商店开张五周年。"
         p2: "您敢想像吗？您再给力一下，这一天也将成为圣经软件达到一亿次安装量的重要纪念日！"
