--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -20,6 +20,8 @@ hi:
     users username or password invalid: "आपके द्वारा उपलब्धित उपयोगकर्ता नाम या पासवर्ड अमान्य हैं।"
     users username required: "username इंटर करना अनिवार्य हैं। "
   meta:
+    100million:
+      title: "100 मिलियन से शुभारंभ हुआ। "
     mobile:
       title: "बाइबिल App"
   now: "अभी "
@@ -49,6 +51,7 @@ hi:
   deleted connection error: "कृपया क्षमा कीजिए,%{connection} आपके कनेक्शन से हटाने में त्रुटी हैं। "
   remove connection: "हटाइए "
   connection users: "कुछ और YouVersion लाभ करता से संपर्क सादे %{connection}:"
+  connection marketing: "YouVersion मित्रों के साथ अध्ययन करने में आनंदायक हैं। अपने YouVersion अकाउंट को अन्य सामाजिक नेटवर्क के साथ लिंक करे और YouVersion पर अपने मित्रों को पाए। अकाउंट लिंक करने से आप सुसमाचार तुरंत क्लिक के साथ शेयर कर सकते हैं । आपके अनुमति के बगैर हम कुछ भी पोस्ट नहीं करेंगे। "
   next step connections: "अगला कदम: अपना कनेक्टेड अकाउंट लिंक करे और YouVersion मित्र खोजे।"
   no notes found: "%{username} के द्वारा कोई टिपण्णी उपलब्ध नहीं  हैं।"
   no recent activity: "%{username} के द्वारा वर्तमान में कोई गतिविधि रेखाकित नहीं हैं।"
@@ -725,13 +728,17 @@ hi:
     load error: "कृपया क्षमा कीजिये और अधिक संस्करण लोड करने में कठिनाई हैं।इस मेनू को निरस्त कर दोबारा कोशिश करे।"
   reader help:
     title: "कोई अनुवाक्य चुने.......... "
+    line 1: "पद्य , पद्यों के समूह को अपने मित्रों में शेयर करने तथा बुकमार्क ,हाईलाइट एवं टिप्पणी निर्माण हेतु उनपर टेप या क्लिक करे। "
   campaigns:
     100m:
       logo: "YouVersion: बाइबिल app"
+      intro: "केवल आपकी मदद से हमारी 5th वर्षगांठ 10 जुलाई को बाइबिल App 100 मिलियन इनस्टॉल का आकड़ा छू सकता हैं। "
       share:
         with friends: "मित्रों के साथ शेयर करे "
         fb:
           dialog name: "क्या आपके पास बाइबिल App है?"
+        tw:
+          tweet: " @YouVersion बाइबिल App को मेरे घर के स्क्रीन पर स्थाई स्थान हैं।पढ़े,सुने,देखे या शेयर करे ....सबकुछ निशुल्क app: bible.com/app के संग "
         em:
           subject: "क्या आपके पास बाइबिल App है?"
       body:
