--- a/config/locales/tl.yml
+++ b/config/locales/tl.yml
@@ -748,7 +748,7 @@ tl:
           tweet: "May Bible App ng @YouVersion ako. Magbasa, manuod, makinig, at magbahagi... libre ‘to!: bible.com/app"
         em:
           subject: "May Bible App ka ba?"
-          body: "Nagugustuhan ko ang Bible App ng YouVersion at sa tingin ko, magugustuhan mo din ito. Madalas kong binabasa ang Bibliya dahil madali itong basahin, panuorin, pakinggan, at ibahagi. May mga Babasahing gabay na pumipili ng talata ng Bibliya para basahin ko araw-araw.\n\nMaaari mo ring makuha ito (ng libre!) sa kahit na anong aparato: http://www.bible.com/app"
+          body: "Nagugustuhan ko ang Bible App ng YouVersion at sa tingin ko, magugustuhan mo din ito. Madalas kong binabasa ang Bibliya dahil madali itong basahin, panuorin, pakinggan, at ibahagi. May mga Babasahing gabay na pumipili ng talata ng Bibliya para basahin ko araw-araw. \n\nMaaari mo ring makuha ito (ng libre!) sa kahit na anong aparato: \nhttp://www.bible.com/app"
       body:
         p1: "May malaking magaganap sa Hulyo 10. Hindi lamang ito ang ika-5 anibersayo ng Bible App, ito rin ang ika-5 taon mula nang masimulan ang iTunes Store ng Apple."
         p2: "Ngunit mas higit pa? Sa tulong mo, ito ang araw na ang Bible App ay maaabot ang 100 milyong download."
