--- a/config/locales/hi.yml
+++ b/config/locales/hi.yml
@@ -743,6 +743,8 @@ hi:
           subject: "क्या आपके पास बाइबिल App है?"
       body:
         p4: "आइये हम साथ मिलकर इतिहास की रचना करे।"
+      ad:
+        copy: "पढ़िए,सुनिए,देखिये या शेयर कीजिये। अपने स्मार्टफ़ोन या टेबलेट हेतु बाइबिल App पाए:<a href='http://bible.com/app'>तुरंत डाउनलोड करे</a>"
       sidebar:
         tagline: "आइये एक साथ इतिहास बनाए।"
         button: "बाइबिल app को शेयर करें "
