--- a/config/locales/ca.yml
+++ b/config/locales/ca.yml
@@ -51,6 +51,7 @@ ca:
   deleted connection error: "Ho sentim, però hi ha hagut un error en desconnectar-te de %{connection}."
   remove connection: "Elimina"
   connection users: "Aquí hi ha varis usuaris amb qui tens relació a %{connection}:"
+  connection marketing: "YouVersion és més divertit amb amics! Enllaça el teu compte de YouVersion amb altres xarxes socials i troba immediatament els teus amics a YouVersion. Enllaçant els teus comptes també actives el compartiment de contingut amb un sol clic. Mai no publicarem res sense el teu permís."
   next step connections: "Següent: Enllaça els teus comptes i troba els teus amics."
   no notes found: "El/la %{username} no té cap nota."
   no recent activity: "El/la %{username} no té activitat recent."
@@ -284,6 +285,7 @@ ca:
       information use title: "Com utilitzem la teva informació?"
       information use text: "Quan et registres en un servei particular que necessita un registre, et demanem que ens donis informació personal. Si LifeChurch.tv volgués utilitzar aquesta informació d'una manera diferent que la proposada en demanar-la, et demanarem el teu consentiment abans d'utilitzar-la. Pots rebutjar l'enviament d'informació personal a qualsevol dels nostres serveis. En aquest cas, no podrem donar-te aquest serveis."
       information security title: "Com protegim la teva informació?"
+      information security text: "LifeChurch.tv no comparteix la teva informació principal amb altres institucions fora de LifeChurch.tv sense el teu consentiment explícit. LifeChurch.tv pot compartir la teva informació només si pensa que l'accés a la informació, el seu ús, preservació o divulgació es raonablement necessari per:\n(a) Satisfer qualsevol llei, regulació, procés legal o fer complir una demanda governamental;\n(b) Fer complir els temes d'ús aplicables, incloent la investigació de violacions potencial d'aquests;\n(c) Detectar o prevenir frau d'identitat, seguretat o problemes tècnics;\n(d) Protegir d'una violació imminent dels drets, de la propietat o de la seguretat de LifeChurch.tv, els seus usuaris o el públic que requereix o permet la llei.\nLifeChurch.tv pren mesures apropiades de seguretat per protegir-se contra accés o alteració no autoritzats, revelació o destrucció de dades, incloent revisions internes sobre l'obtenció, l'emmagatzemament i processament de dades, i mesures de seguretat, com ara mesures físiques de seguretat per guardar-nos d'atacs als sistemes on desem la informació personat. Excepte amb el teu permís explícit, LifeChurch.tv restringeix l'accés a la informació personal als seus empleats, contractants i agents que necessiten saber aquesta informació per fer funcionar, desenvolupar o millorar els nostres serveis. Aquests individus estan sotmesos a obligacions de confidencialitat i poden estar subjectes a mesures disciplinàries, incloent l'acomiadament i accions penals, si no compleixen amb aquestes obligacions."
       data integrity title: "Integritat de les dades"
       data integrity text: "LifeChurch.tv revisa com s'obtenen, s'emmagatzemen i es processen les dades per assegurar-nos que només obtenim, emmagatzem i processem la informació personal necessària per proporcionar o arreglar els nostres serveis. Nosaltres fem els passos necessaris per assegurar-nos que la informació personal que processem és acurada, completa i actualitzada, però depenem dels nostres usuaris per actualitzar o corregir la seva informació personal sempre que sigui necessari."
       information access title: "Accedint i actualitzant la informació personal"
@@ -732,12 +734,19 @@ ca:
     line 1: "Clica a quasevol verset o grup de versets per marcar, ressaltar, crear una nota o compartir amb els teus amics!"
   campaigns:
     100m:
+      logo: "YouVersion: l'aplicació de la Bíblia"
+      tagline: "Es comença amb <em>100 milions</em>"
       intro: "Podem fer que l'aplicació de la Bíblia arribi als 100 milions d'instal·lacions abans del nostre 5è aniversari el 10 de juliol? Amb la teva ajuda sí!"
       share:
+        with friends: "Comparteix amb els teus amics"
         fb:
           dialog name: "Tens l'aplicació de la Bíblia?"
+          dialog desc: "M'encanta l'aplicació de la Bíblia! Realment m'ha ajudat a que la Bíblia sigui part de la meva vida diària. Puc ressaltar, escoltar Bíblies en format àudio, prendre notes, seguir plans devocionals...i fins i tot mirar vídeos! Descarrega-te-la ara (és gratuïta): http://www.bible.com/app"
+        tw:
+          tweet: "L'aplicació de la Bíblia de YouVersion té un lloc permanent a la meva pantalla inicial. Llegeix, mira, escolta i comparteix...tot en una aplicació gratuïta: bible.com/app"
         em:
           subject: "Tens l'aplicació de la Bíblia?"
+          body: "Estic gaudint de l'aplicació de la Bíblia de YouVersion i crec que a tu segurament també t'agradaria. Darrerament estic obrint molt més la Bíblia perquè és molt fàcil de llegir, mirar, escoltar i compartir. Fins i tot té Plans, que tenen una selecció de la Bíblia ben escollida i que m'espera cada dia.\n\nLa pots aconseguir (de franc!) per gairebé qualsevol dispositiu mòbil aquí:\nhttp://www.bible.com/app"
       body:
         p4: "Fem història plegats."
       ad:
